feature: add pekko persistence demo

--- a/carp-examples/carp-pekko-example/src/main/resources/application.conf
+++ b/carp-examples/carp-pekko-example/src/main/resources/application.conf
@@ -6,11 +6,48 @@ pekko {
       "cn.sliew.carp.framework.pekko.serialization.CborSerializable" = jackson-cbor
     }
   }
-
+# 目前仅支持 postgresql 和 h2
   persistence {
-    # inmem only for tests
-    journal.plugin = "pekko.persistence.journal.inmem"
-    snapshot-store.plugin = "pekko.persistence.snapshot-store.local"
-    snapshot-store.local.dir = "target/snapshot"
+    journal.plugin = "jdbc-journal"
+    snapshot-store.plugin = "jdbc-snapshot-store"
+#    snapshot-store.local.dir = "target/snapshot"
+    state.plugin = "jdbc-durable-state-store"
   }
 }
+
+pekko-persistence-jdbc {
+  shared-databases {
+    slick {
+      profile = "slick.jdbc.H2Profile$"
+      db {
+        host = "127.0.0.1"
+        url = "jdbc:h2:mem:test-database;DATABASE_TO_UPPER=false;"
+        user = "root"
+        password = "123456"
+        driver = "org.h2.Driver"
+        numThreads = 5
+        maxConnections = 5
+        minConnections = 1
+      }
+    }
+  }
+}
+
+jdbc-journal {
+  use-shared-db = "slick"
+}
+
+# the pekko-persistence-snapshot-store in use
+jdbc-snapshot-store {
+  use-shared-db = "slick"
+}
+
+# the pekko-persistence-query provider in use
+jdbc-read-journal {
+  use-shared-db = "slick"
+}
+
+jdbc-durable-state-store {
+  use-shared-db = "slick"
+}
+
