--- a/carp-framework/carp-framework-pekko/pom.xml
+++ b/carp-framework/carp-framework-pekko/pom.xml
@@ -55,6 +55,20 @@
             <groupId>org.apache.pekko</groupId>
             <artifactId>pekko-persistence-typed_${scala.binary.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pekko</groupId>
+            <artifactId>pekko-persistence-jdbc_${scala.binary.version}</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
