--- a/carp-examples/carp-pekko-example/src/main/resources/application.conf
+++ b/carp-examples/carp-pekko-example/src/main/resources/application.conf
@@ -2,15 +2,35 @@ pekko {
   loglevel = DEBUG
 
   actor {
+    provider = cluster
     serialization-bindings {
       "cn.sliew.carp.framework.pekko.serialization.CborSerializable" = jackson-cbor
     }
   }
-# 目前仅支持 postgresql 和 h2
+
+  # For the sample, just bind to loopback and do not allow access from the network
+  # the port is overridden by the logic in main class
+  remote.artery {
+    canonical.port = 0
+    canonical.hostname = 127.0.0.1
+  }
+
+  cluster {
+    seed-nodes = [
+      "pekko://KillrWeather@127.0.0.1:7345",
+      "pekko://KillrWeather@127.0.0.1:7355"
+    ]
+    sharding {
+      number-of-shards = 100
+    }
+    downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
+  }
+
+  # 目前仅支持 postgresql 和 h2
   persistence {
     journal.plugin = "jdbc-journal"
     snapshot-store.plugin = "jdbc-snapshot-store"
-#    snapshot-store.local.dir = "target/snapshot"
+    # snapshot-store.local.dir = "target/snapshot"
     state.plugin = "jdbc-durable-state-store"
   }
 }
