--- a/carp-framework/carp-framework-pekko/pom.xml
+++ b/carp-framework/carp-framework-pekko/pom.xml
@@ -45,6 +45,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.pekko</groupId>
+            <artifactId>pekko-cluster-sharding-typed_${scala.binary.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pekko</groupId>
             <artifactId>pekko-stream_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
@@ -58,6 +62,14 @@
         <dependency>
             <groupId>org.apache.pekko</groupId>
             <artifactId>pekko-persistence-jdbc_${scala.binary.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pekko</groupId>
+            <artifactId>pekko-http_${scala.binary.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pekko</groupId>
+            <artifactId>pekko-http-jackson_${scala.binary.version}</artifactId>
         </dependency>
 
         <dependency>
