--- a/pom.xml
+++ b/pom.xml
@@ -432,6 +432,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.pekko</groupId>
+                <artifactId>pekko-cluster-sharding-typed_${scala.binary.version}</artifactId>
+                <version>${pekko.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.pekko</groupId>
                 <artifactId>pekko-stream_${scala.binary.version}</artifactId>
                 <version>${pekko.version}</version>
             </dependency>
@@ -448,6 +453,16 @@
             <dependency>
                 <groupId>org.apache.pekko</groupId>
                 <artifactId>pekko-persistence-jdbc_${scala.binary.version}</artifactId>
+                <version>${pekko.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.pekko</groupId>
+                <artifactId>pekko-http_${scala.binary.version}</artifactId>
+                <version>${pekko.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.pekko</groupId>
+                <artifactId>pekko-http-jackson_${scala.binary.version}</artifactId>
                 <version>${pekko.version}</version>
             </dependency>
 
