--- a/carp-modules/carp-module-security/pom.xml
+++ b/carp-modules/carp-module-security/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-modules</artifactId>
-        <version>0.0.3-SNAPSHOT</version>
+        <version>0.0.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-module-security</artifactId>
