feature: update security module

--- a/carp-modules/carp-module-persistence/pom.xml
+++ b/carp-modules/carp-module-persistence/pom.xml
@@ -27,6 +27,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-module-persistence</artifactId>
+    <packaging>pom</packaging>
 
     <modules>
         <module>carp-module-persistence-api</module>
