--- a/carp-framework/carp-framework-common/pom.xml
+++ b/carp-framework/carp-framework-common/pom.xml
@@ -64,6 +64,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.flipkart.zjsonpatch</groupId>
+            <artifactId>zjsonpatch</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>cn.sliew</groupId>
             <artifactId>milky-common</artifactId>
         </dependency>
