--- a/carp-server/pom.xml
+++ b/carp-server/pom.xml
@@ -42,6 +42,10 @@
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-datasource</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-module-security-spring</artifactId>
         </dependency>
         <dependency>
