--- a/carp-examples/carp-mongo-example/pom.xml
+++ b/carp-examples/carp-mongo-example/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-examples</artifactId>
-        <version>0.0.6-SNAPSHOT</version>
+        <version>0.0.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-mongo-example</artifactId>
