--- a/pom.xml
+++ b/pom.xml
@@ -97,24 +97,24 @@
         <org.mapstruct.extensions.spring.version>0.1.1</org.mapstruct.extensions.spring.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <mapstruct.lombok.binding.version>0.2.0</mapstruct.lombok.binding.version>
-        <org.projectlombok.version>1.18.24</org.projectlombok.version>
-        <hutool.version>5.8.27</hutool.version>
+        <org.projectlombok.version>1.18.32</org.projectlombok.version>
+        <hutool.version>5.8.30</hutool.version>
         <commons.lang3.version>3.12.0</commons.lang3.version>
         <commons.beanutils.version>1.9.4</commons.beanutils.version>
         <commons.text.version>1.9</commons.text.version>
         <commons.compress.version>1.19</commons.compress.version>
         <commons.io.version>2.11.0</commons.io.version>
-        <guava.version>32.1.3-jre</guava.version>
+        <guava.version>33.2.1-jre</guava.version>
         <milky.version>1.0.13</milky.version>
 
-        <mybatis.version>3.0.3</mybatis.version>
-        <mybatis.plus.version>3.5.6</mybatis.plus.version>
+        <mybatis.spring.version>3.0.3</mybatis.spring.version>
+        <mybatis.plus.version>3.5.7</mybatis.plus.version>
         <velocity.engine.version>2.2</velocity.engine.version>
         <mysql.version>8.3.0</mysql.version>
         <h2.version>2.3.230</h2.version>
 
         <sa-token.version>1.38.0</sa-token.version>
-        <knife4j.version>4.4.0</knife4j.version>
+        <knife4j.version>4.5.0</knife4j.version>
         <hadoop.version>3.3.4</hadoop.version>
         <pekko.version>1.1.0-M1</pekko.version>
         <minio.version>8.3.8</minio.version>
@@ -324,7 +324,7 @@
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis-spring</artifactId>
-                <version>${mybatis.version}</version>
+                <version>${mybatis.spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
