--- a/carp-modules/carp-module-alert/pom.xml
+++ b/carp-modules/carp-module-alert/pom.xml
@@ -28,4 +28,14 @@
     </parent>
     <artifactId>carp-module-alert</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
