--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,11 @@
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-alert</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-application-vela</artifactId>
                 <version>${project.version}</version>
             </dependency>
