--- a/carp-examples/carp-ageiport-example/pom.xml
+++ b/carp-examples/carp-ageiport-example/pom.xml
@@ -22,22 +22,22 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-examples</artifactId>
         <version>0.0.10-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-modules</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-ageiport-example</artifactId>
 
-    <modules>
-        <module>carp-module-alert</module>
-        <module>carp-module-application</module>
-        <module>carp-module-datasource</module>
-        <module>carp-module-export</module>
-        <module>carp-module-kubernetes</module>
-        <module>carp-module-persistence</module>
-        <module>carp-module-plugin</module>
-        <module>carp-module-resource</module>
-        <module>carp-module-security</module>
-        <module>carp-module-system</module>
-    </modules>
+    <properties>
+        <ageiport.version>0.3.2</ageiport.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>ageiport-task-server</artifactId>
+            <version>${ageiport.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
