--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>carp-modules</module>
         <module>carp-dist</module>
         <module>carp-examples</module>
+        <module>carp-examples/carp-ageiport-example</module>
     </modules>
 
     <properties>
