--- a/carp-examples/carp-ageiport-example/carp-ageiport-processor/pom.xml
+++ b/carp-examples/carp-ageiport-example/carp-ageiport-processor/pom.xml
@@ -28,6 +28,10 @@
     </parent>
     <artifactId>carp-ageiport-processor</artifactId>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
