feature: add ageiport processor example

--- a/carp-examples/pom.xml
+++ b/carp-examples/pom.xml
@@ -29,6 +29,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>carp-ageiport-example</module>
         <module>carp-mongo-example</module>
         <module>carp-pekko-example</module>
     </modules>
