--- a/pom.xml
+++ b/pom.xml
@@ -647,6 +647,7 @@
                     <serverId>sonatype-nexus</serverId>
                     <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    <skipNexusStagingDeployMojo>${maven.deploy.skip}</skipNexusStagingDeployMojo>
                 </configuration>
             </plugin>
         </plugins>
