--- a/carp-framework/carp-framework-dag/pom.xml
+++ b/carp-framework/carp-framework-dag/pom.xml
@@ -33,5 +33,10 @@
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-framework-mybatis</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
