feature: add default queue

--- a/carp-modules/carp-module-queue/carp-module-queue-api/pom.xml
+++ b/carp-modules/carp-module-queue/carp-module-queue-api/pom.xml
@@ -22,15 +22,26 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp-modules</artifactId>
+        <artifactId>carp-module-queue</artifactId>
         <version>0.0.10-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-queue</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-module-queue-api</artifactId>
 
-    <modules>
-        <module>carp-module-queue-api</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-common</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
