--- a/carp-plugins/carp-plugin-schedule/pom.xml
+++ b/carp-plugins/carp-plugin-schedule/pom.xml
@@ -22,24 +22,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-plugins</artifactId>
         <version>0.0.10-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-modules</artifactId>
+    <artifactId>carp-plugin-schedule</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>carp-module-alert</module>
-        <module>carp-module-application</module>
-        <module>carp-module-datasource</module>
-        <module>carp-module-export</module>
-        <module>carp-module-kubernetes</module>
-        <module>carp-module-persistence</module>
-        <module>carp-module-plugin</module>
-        <module>carp-module-queue</module>
-        <module>carp-module-resource</module>
-        <module>carp-module-scheduler</module>
-        <module>carp-module-security</module>
-        <module>carp-module-system</module>
+        <module>carp-plugin-schedule-api</module>
+        <module>carp-plugin-schedule-quartz</module>
     </modules>
+
 </project>
