--- a/carp-plugins/carp-plugin-test/carp-plugin-test-1/pom.xml
+++ b/carp-plugins/carp-plugin-test/carp-plugin-test-1/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-plugin-test</artifactId>
-        <version>0.0.10-SNAPSHOT</version>
+        <version>0.0.10</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-plugin-test-1</artifactId>
