--- a/carp-examples/carp-ageiport-example/carp-ageiport-processor/pom.xml
+++ b/carp-examples/carp-ageiport-example/carp-ageiport-processor/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-ageiport-example</artifactId>
-        <version>0.0.11-SNAPSHOT</version>
+        <version>0.0.11</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-ageiport-processor</artifactId>
