feature: add dag topology sort

--- a/carp-framework/carp-framework-dag/pom.xml
+++ b/carp-framework/carp-framework-dag/pom.xml
@@ -38,5 +38,10 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
