--- a/carp-modules/carp-module-workflow/pom.xml
+++ b/carp-modules/carp-module-workflow/pom.xml
@@ -31,6 +31,7 @@
 
     <modules>
         <module>carp-module-workflow-api</module>
+        <module>carp-module-workflow-internal</module>
     </modules>
 
 </project>
