--- a/carp-modules/carp-module-workflow/carp-module-workflow-internal/pom.xml
+++ b/carp-modules/carp-module-workflow/carp-module-workflow-internal/pom.xml
@@ -42,6 +42,10 @@
             <groupId>com.alibaba.cola</groupId>
             <artifactId>cola-component-statemachine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
