--- a/carp-modules/carp-module-scheduler/carp-module-scheduler-base/pom.xml
+++ b/carp-modules/carp-module-scheduler/carp-module-scheduler-base/pom.xml
@@ -22,15 +22,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp-modules</artifactId>
+        <artifactId>carp-module-scheduler</artifactId>
         <version>0.0.12-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-scheduler</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-module-scheduler-base</artifactId>
 
-    <modules>
-        <module>carp-module-scheduler-base</module>
-        <module>carp-module-scheduler-quartz</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-web</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
