--- a/carp-server/pom.xml
+++ b/carp-server/pom.xml
@@ -50,6 +50,10 @@
         </dependency>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-scheduler-quartz</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-module-security-spring</artifactId>
         </dependency>
         <dependency>
