--- a/carp-modules/carp-module-workflow/carp-module-workflow-api/pom.xml
+++ b/carp-modules/carp-module-workflow/carp-module-workflow-api/pom.xml
@@ -31,6 +31,10 @@
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-framework-dag</artifactId>
         </dependency>
     </dependencies>
