--- a/carp-support/carp-generator/pom.xml
+++ b/carp-support/carp-generator/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-engine-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
