--- a/carp-server/pom.xml
+++ b/carp-server/pom.xml
@@ -68,6 +68,10 @@
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-module-system</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-workflow-internal</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
