--- a/carp-framework/carp-framework-task/pom.xml
+++ b/carp-framework/carp-framework-task/pom.xml
@@ -22,24 +22,20 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-framework</artifactId>
         <version>0.0.12-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-framework</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-framework-task</artifactId>
 
-    <modules>
-        <module>carp-framework-common</module>
-        <module>carp-framework-dag</module>
-        <module>carp-framework-exception</module>
-        <module>carp-framework-metrics</module>
-        <module>carp-framework-mongo</module>
-        <module>carp-framework-mybatis</module>
-        <module>carp-framework-pekko</module>
-        <module>carp-framework-redis</module>
-        <module>carp-framework-task</module>
-        <module>carp-framework-web</module>
-    </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-exception</artifactId>
+        </dependency>
+    </dependencies>
 </project>
