--- a/carp-examples/pom.xml
+++ b/carp-examples/pom.xml
@@ -24,6 +24,7 @@
         <groupId>cn.sliew</groupId>
         <artifactId>carp</artifactId>
         <version>0.0.12-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-examples</artifactId>
     <packaging>pom</packaging>
