feature: add gravitino docker

--- a/tools/docker/gravitino/conf/gravitino.conf
+++ b/tools/docker/gravitino/conf/gravitino.conf
@@ -1,7 +1,15 @@
 
+# THE CONFIGURATION FOR Gravitino ENTITY STORE
+# The entity store to use, we only supports relational
 gravitino.entity.store = relational
+# The backend for the entity store, we only supports JDBC
 gravitino.entity.store.relational = JDBCBackend
+
+# The JDBC URL for the entity store
 gravitino.entity.store.relational.jdbcUrl = jdbc:mysql://mysql:3306/gravitino?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useAffectedRows=true
+# The JDBC driver class name
 gravitino.entity.store.relational.jdbcDriver = com.mysql.cj.jdbc.Driver
+# The JDBC user name
 gravitino.entity.store.relational.jdbcUser = root
+# The JDBC password
 gravitino.entity.store.relational.jdbcPassword = 123456
