--- a/tools/docker/local/docker-compose.yml
+++ b/tools/docker/local/docker-compose.yml
@@ -70,7 +70,9 @@ services:
     container_name: gravitino
     ports:
       - 8090:8090
-#    volumes:
+    volumes:
+      - ../gravitino/conf/gravitino.cnf:/root/gravitino/conf/gravitino.conf
+      - ../gravitino/libs/mysql.jar:/root/gravitino/libs/mysql.jar
 #      - /path/to/mysql.jar:/root/gravitino/catalogs/jdbc-mysql/libs/mysql.jar
 #      - /path/to/mysql.jar:/root/gravitino/catalogs/jdbc-doris/libs/mysql.jar
     networks:
