--- a/tools/docker/local/docker-compose.yml
+++ b/tools/docker/local/docker-compose.yml
@@ -68,6 +68,9 @@ services:
   gravitino:
     image: apache/gravitino:0.6.0-incubating
     container_name: gravitino
+    depends_on:
+      mysql:
+        condition: service_healthy
     ports:
       - 8090:8090
 #    volumes:
