--- a/tools/docker/local/docker-compose.yml
+++ b/tools/docker/local/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     ports:
       - 8090:8090
 #    volumes:
-#      - ../gravitino/conf/gravitino.cnf:/root/gravitino/conf/gravitino.conf
+#      - ../gravitino/conf/gravitino.conf:/root/gravitino/conf/gravitino.conf
 #      - /path/to/mysql.jar:/root/gravitino/libs/mysql.jar
 #      - /path/to/mysql.jar:/root/gravitino/catalogs/jdbc-mysql/libs/mysql.jar
 #      - /path/to/mysql.jar:/root/gravitino/catalogs/jdbc-doris/libs/mysql.jar
