--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>carp-framework-spring</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-framework-web</artifactId>
                 <version>${project.version}</version>
             </dependency>
