feature: update task framework

--- a/carp-framework/carp-framework-task/pom.xml
+++ b/carp-framework/carp-framework-task/pom.xml
@@ -37,5 +37,10 @@
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-framework-exception</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
